--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     </header>
     <article>
         <h2>
-            titulo noticia
+            titulo noticia hola
         </h2>
         <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem placeat, sit non nobis quo est sequi harum odio officiis sunt perferendis omnis laudantium iusto tempore. Odio sit porro a omnis?
