agregar bordes en lista

--- a/ejercicio 2/index.html
+++ b/ejercicio 2/index.html
@@ -73,7 +73,7 @@
         </article>
     </div>
     <div name="ejercicio7">
-        <table>
+        <table border="1">
             <tr>
                 <td><strong>Libro</strong></td>
                 <td><strong>Autor</strong></td>
