--- a/ejercicio 2/practica1.html
+++ b/ejercicio 2/practica1.html
@@ -28,7 +28,7 @@
     </section>
     <section>
         <h2>Ej 3</h2>
-        <p style="color: red; font-size: 20px;">Este es un párrafo con estilo inline</p>
+        <p style="color: rgb(255, 0, 234); font-size: 20px;">Este es un párrafo con estilo inline</p>
         <p class="parrafo">Este es un párrafo con estilo en archivo externo</p>
     </section>
 </body>
